--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-ui-pro-starter-laravel",
+  "name": "nuxt-ui-template-starter-laravel",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,35 +12,35 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@types/node": "^22.15.12",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-vue": "^10.1.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript-eslint": "^8.32.0",
-    "vue-tsc": "^2.2.10"
+    "@eslint/js": "^9.35.0",
+    "@types/node": "^24.3.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.4.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.2.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript-eslint": "^8.42.0",
+    "vue-tsc": "^3.0.6"
   },
   "dependencies": {
-    "@inertiajs/vue3": "^2.0.8",
-    "@nuxt/ui-pro": "^3.1.1",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vueuse/core": "^13.1.0",
+    "@inertiajs/vue3": "^2.1.5",
+    "@nuxt/ui": "^4.0.0-alpha.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vueuse/core": "^13.9.0",
     "clsx": "^2.1.1",
-    "concurrently": "^9.1.2",
-    "laravel-vite-plugin": "^1.2",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vue": "^3.5.13",
-    "ziggy-js": "^2.5.2"
+    "concurrently": "^9.2.1",
+    "laravel-vite-plugin": "^2.0",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4",
+    "vue": "^3.5.21",
+    "ziggy-js": "^2.5.3"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.40.2",
-    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.5",
-    "lightningcss-linux-x64-gnu": "^1.29.3"
+    "@rollup/rollup-linux-x64-gnu": "4.50.1",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.13",
+    "lightningcss-linux-x64-gnu": "^1.30.1"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
@@ -48,5 +48,5 @@
       "vue-demi"
     ]
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.15.1"
 }
