--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "concurrently": "^9.2.1",
     "laravel-vite-plugin": "^2.0.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.1.11",
     "vue": "^3.5.22",
